--- a/src/tools/compiletest/Cargo.toml
+++ b/src/tools/compiletest/Cargo.toml
@@ -22,7 +22,7 @@ home = "*"
 lazycell = "1.3.0"
 
 [target.'cfg(unix)'.dependencies]
-libc = "0.2"
+libc = { git = "https://github.com/lewis-revill/libc-cheri", branch = "0.2.158-rustc-patches" }
 
 [target.'cfg(windows)'.dependencies]
 miow = "0.3"
