--- a/src/tools/miri/Cargo.toml
+++ b/src/tools/miri/Cargo.toml
@@ -32,7 +32,7 @@ rustc-workspace-hack = "1.0.0"
 measureme = "10.0.0"
 
 [target.'cfg(unix)'.dependencies]
-libc = "0.2"
+libc = { git = "https://github.com/lewis-revill/libc-cheri", branch = "0.2.158-rustc-patches" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libffi = "3.0.0"
