--- a/src/tools/miri/test_dependencies/Cargo.toml
+++ b/src/tools/miri/test_dependencies/Cargo.toml
@@ -10,7 +10,7 @@ edition = "2021"
 [dependencies]
 # all dependencies (and their transitive ones) listed here can be used in `tests/`.
 tokio = { version = "1.0", features = ["full"] }
-libc = "0.2"
+libc = { git = "https://github.com/lewis-revill/libc-cheri", branch = "0.2.158-rustc-patches" }
 page_size = "0.4.1"
 num_cpus = "1.10.1"
 
