--- a/src/tools/rust-analyzer/crates/profile/Cargo.toml
+++ b/src/tools/rust-analyzer/crates/profile/Cargo.toml
@@ -12,7 +12,7 @@ doctest = false
 [dependencies]
 once_cell = "1.15.0"
 cfg-if = "1.0.0"
-libc = "0.2.135"
+libc = { git = "https://github.com/lewis-revill/libc-cheri", branch = "0.2.135-rustc-patches" }
 la-arena = { version = "0.3.0", path = "../../lib/la-arena" }
 countme = { version = "3.0.1", features = ["enable"] }
 jemalloc-ctl = { version = "0.5.0", package = "tikv-jemalloc-ctl", optional = true }
